# downloader-bot

./: .dockerignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
src/: errors.py  main.py  settings.py
src/downloader/: base.py  reels.py  shorts.py  tiktok.py
src/handlers/: __init__.py  download.py  start.py
